# remote-server-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  TESTING.md  TODO.md  config.toml.example  pyproject.toml  remote-monitor-pdr.md  requirements.txt  run_tests.py  test_basic.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rsm/: __init__.py  __main__.py
rsm/collectors/: __init__.py  base.py  database.py  process.py  system.py  webserver.py
rsm/core/: config.py  ssh_manager.py
rsm/ui/: app.py
rsm/ui/widgets/: __init__.py  service_widgets.py
rsm/utils/: platform.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_system.py
tests/unit/: __init__.py  test_collectors.py  test_platform.py  test_ssh_manager.py
